@@ -7,6 +7,8 @@ Changes log
     - Bugs fixed
        - RDF/XML writing wasn't properly factoring statements from the same
          source reference.
+       - SaxRepresentation wasn't writing the wrapped SAX sources. Added
+         logic to write(XmlWriter) method. Reported by Raif S. Naffah.
     
     - 2.0.9 (2011-08-20)
     - Bugs fixed
